--- a/roles/rtfm-jenkins/templates/docker-compose.yml.j2
+++ b/roles/rtfm-jenkins/templates/docker-compose.yml.j2
@@ -9,5 +9,6 @@ services:
       volumes:
         - {{ jenkins_mount_path }}:/var/jenkins_home
         - /var/run/docker.sock:/var/run/docker.sock
+        - /usr/bin/docker:/usr/bin/docker
       environment:
         - JENKINS_HOME=/var/jenkins_home
