restart: unless-stopped added

--- a/roles/rtfm-jenkins/templates/docker-compose.yml.j2
+++ b/roles/rtfm-jenkins/templates/docker-compose.yml.j2
@@ -4,6 +4,7 @@ services:
     jenkins:
       user: root
       image: jenkins
+      restart: unless-stopped
       ports:
         - '80:8080'
       volumes:
